# bsp-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  conf.ini
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: torus.glb
bsp-explorer/: Cargo.toml
bsp-explorer/src/: camera.rs  camera_controller.rs  geo.rs  lib.rs  loader.rs  state.rs  transform.rs
bsp-explorer/src/gui/: gui.rs  map_select.rs  mod.rs  task_viewer.rs  viewable.rs  vmt.rs  vpk.rs  vtf.rs
bsp-explorer/src/gui22/: mod.rs  task_viewer.rs  vmt.rs  vpk.rs  vtf.rs
bsp-explorer/src/v/: mod.rs  vmesh.rs  vrenderer.rs
bsp-web/: Cargo.toml  package-lock.json
bsp-web/.cargo/: config.toml
bsp-web/src/: lib.rs
bsp-web/www/: index.html  index.js  package-lock.json  package.json
common/: Cargo.toml
common/shaders/: displacement.wgsl  solid_white.wgsl  textured_shader.wgsl  textured_shader_envmap.wgsl  uv_shader.wgsl
common/src/: lib.rs  prelude.rs  vbuffer.rs  vertex.rs  vfile.rs  vinstance.rs  vpath.rs  vshader.rs  vtexture.rs
source/: Cargo.toml
source-explorer/: Cargo.toml
source-explorer/src/: main.rs  vmt_asset_loader.rs  vpk_asset_reader.rs  vtf_asset_loader.rs
source/src/: game_data.rs  lib.rs  meshes.rs  prelude.rs
source/src/binaries/: mod.rs
source/src/bsp/: consts.rs  displacement.rs  edges.rs  edges_debug_mesh.rs  face.rs  gamelump.rs  header.rs  lightmap.rs  lump.rs  mod.rs  model.rs  plane.rs  textures.rs  vert.rs
source/src/studio/: mdl.rs  mdl_headers.rs  mod.rs  vtx.rs  vvd.rs
source/src/vmt/: mod.rs
source/src/vpk/: mod.rs  pak.rs
source/src/vtf/: binary_data.rs  consts.rs  header.rs  mod.rs  vtf.rs
src/: camera.rs  camera_controller.rs  displacement.wgsl  game_data.rs  geo.rs  lib.rs  shader.rs  shader.wgsl  state.rs  state_imgui.rs  state_mesh.rs  texture.rs  textured_shader.wgsl  textured_shader_envmap.wgsl  transform.rs  uv_shader.wgsl  vertex.rs  vmesh.rs  vtexture.rs
src/assets/: mod.rs
src/assets/bsp/: consts.rs  displacement.rs  edges.rs  face.rs  gamelump.rs  header.rs  lightmap.rs  loader.rs  lump.rs  mod.rs  model.rs  plane.rs  textures.rs
src/assets/mdl/: headers.rs  mod.rs
src/assets/studio/: mdl.rs  mdl_headers.rs  mod.rs  vertex.rs  vtx.rs  vvd.rs
src/assets/vmt/: mod.rs
src/assets/vpk/: gui.rs  mod.rs  pak.rs
src/assets/vtf/: binary_data.rs  consts.rs  gui.rs  header.rs  mod.rs  vtf.rs
src/assets/vtx/: vtx.rs
src/binaries/: mod.rs
src/bsp/: consts.rs  displacement.rs  edge.rs  edges.rs  edges_debug_mesh.rs  face.rs  header.rs  lightmap.rs  loader.rs  lump.rs  mod.rs  model.rs  pak.rs  plane.rs  textures.rs  vert.rs
src/gui/: gui.rs  map_select.rs  mod.rs  state_imgui.rs  viewable.rs
src/util/: binary_data.rs  mod.rs
src/v/: mod.rs  vbuffer.rs  vfile.rs  vmesh.rs  vpath.rs  vrenderer.rs  vshader.rs  vtexture.rs
src/vmt/: de.rs  gui.rs  mod.rs
src/vpk/: file.rs  gui.rs  mod.rs  pak.rs
src/vtf/: binary_data.rs  consts.rs  gui.rs  header.rs  mod.rs  vtf.rs
src/vtx/: mod.rs
