
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["source", "bsp-web", "bsp-explorer", "common"]
default-members = ["bsp-explorer"]
resolver = "2"
package.edition = "2021"

[workspace.dependencies]
winit = "0.27"
wgpu = "0.16"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.13", features = ["derive", "extern_crate_alloc"] }
crate = "0.0.2"
async-trait = "0.1"
glam = { version = "0.24.1", features = [
	"bytemuck",
] } #https://docs.rs/glam/latest/glam/
flagset = "0.4.3"
num-traits = "0.2.16"
num-derive = "0.4.0"
stream-unzip = "0.2.1"
rayon = "1.7.0"
bevy_ecs = "0.11.2"
getset = "0.1.2"
fixedstr = "0.4.5"
rust-ini = "0.19.0"
ahash = "0.8.3"
