
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["source", "bsp-web", "bsp-explorer", "common"]
default-members = ["bsp-explorer"]
resolver = "2"
package.edition = "2021"

[workspace.dependencies]
winit = "0.28"
wgpu = { version = "0.17", features = ["fragile-send-sync-non-atomic-wasm"] }
log = "0.4"
bytemuck = { version = "1.13", features = ["derive", "extern_crate_alloc"] }
glam = { version = "0.24.1", features = [
	"bytemuck",
] } #https://docs.rs/glam/latest/glam/
bevy_ecs = "0.11.2"
rust-ini = "0.19.0"
ahash = "0.8.3"
