[package]
name = "bsp-explorer"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["desktop"]
desktop = ["dep:imgui", "dep:imgui-wgpu", "dep:imgui-winit-support"]
wasm = ["dep:web-sys"]

[dependencies]
winit.workspace = true
imgui = { version = "0.11", features = ["tables-api"], optional = true }
imgui-wgpu = { version = "0.23", optional = true }
imgui-winit-support = { version = "0.11", optional = true }
web-sys = { version = "0.3", features = [
	"Document",
	"Window",
	"Element",
	"Gpu",
], optional = true }
source = { path = "../source" }
common = { path = "../common" }
bevy_ecs.workspace = true
env_logger.workspace = true
bytemuck.workspace = true
wgpu.workspace = true
glam.workspace = true
log.workspace = true
rayon.workspace = true
pollster.workspace = true
rust-ini.workspace = true
