
[package]
name = "bsp-web"
version = "0.1.0"
authors = ["Maxwell <43613592+pettett@users.noreply.github.com>"]
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
winit.workspace = true
bytemuck.workspace = true
env_logger.workspace = true
log.workspace = true
glam.workspace = true
bevy_ecs.workspace = true
wasm-logger = "0.2.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
	"Blob",
	"FileList",
	"File",
	"HtmlCanvasElement",
] }
js-sys = { version = "0.3" }
wasm-bindgen-futures = "0.4.37"
source = { path = "../source" }
common = { path = "../common" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.bsp-explorer]
path = "../bsp-explorer"
features = ["wasm"]
default-features = false
