[package]
name = "source"
version = "0.1.0"
edition.workspace = true

[features]
default = ["desktop"]
desktop = []

[dependencies]
common = { path = "../common" }
wgpu.workspace = true
bytemuck.workspace = true
flagset.workspace = true
bevy_ecs.workspace = true
log.workspace = true
num-derive.workspace = true
num-traits.workspace = true
glam.workspace = true
fixedstr.workspace = true
ahash.workspace = true
stream-unzip.workspace = true
rust-ini.workspace = true
