[package]
name = "source"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
wgpu.workspace = true
bytemuck.workspace = true
flagset = "0.4.3"
bevy_ecs.workspace = true
log.workspace = true
num-traits = "0.2.16"
num-derive = "0.4.0"
glam.workspace = true
fixedstr = "0.4.5"
ahash.workspace = true
stream-unzip = "0.2.1"
rust-ini.workspace = true
